--- a/templates/cart.html
+++ b/templates/cart.html
@@ -2,10 +2,11 @@
 {% extends 'base.html' %}
 
 {% block body %}
+        <table class="table table-striped mt-3">
 
-    <table class="table table-striped mt-3">
-        <thead>
-        <tr>
+            
+            <thead>
+         <tr>
             <th>Melon Name</th>
             <th>Quantity</th>
             <th>Price</th>
@@ -13,20 +14,24 @@
         </tr>
         </thead>
         <tbody>
-        <tr>
-            <td>Ancient Watermelon</td>
-            <td>5</td>
-            <td>$3.00</td>
-            <td>$15.00</td>
-        </tr>
-        <tr>
+            {% for melon in cart %}
+            <tr>
+                <td> {{ melon.common_name}} </td>
+                <td>{{ melon.quantity }}</td>
+                <td>{{ melon.price }}</td>
+                <td> {{ melon.total_cost }}</td>
+            </tr>
+            {% endfor %}
+            
+        <!-- <tr>
             <td>Charleston Gray</td>
             <td>2</td>
             <td>$2.00</td>
             <td>$4.00</td>
         </tr>
         <tr>
-            <td>Crenshaw</td>
+    
+        <td>Crenshaw</td>
             <td>1</td>
             <td>$2.00</td>
             <td>$2.00</td>
@@ -36,11 +41,11 @@
             <td>2</td>
             <td>$3.00</td>
             <td>$6.00</td>
-        </tr>
+        </tr> -->
         </tbody>
     </table>
 
-    <h3>Total: $27.00</h3>
+    <h3>Total: </h3> -->
 
     <a href="/checkout" class="btn btn-large btn-primary">Check Out</a>
 
